examples/test/testpolicy885.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy885
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key34: value46
      key39: value47
      key4: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value4
      podSelector:
        matchLabels:
          key13: value40
          key12: value9
          key42: value18
